# uob-sharepoint-scraper

./: DEV.md  LICENSE  README.md  SITES.txt  justfile  pyproject.toml
scripts/: all-sites.py  check-playwright.py  generate-sitemap.py  scrape-site.py
src/scraper/: __init__.py  config.py  general_parser.py  markdown_converter.py  navbar_helpers.py  navbar_parser.py  page_render.py
src/scraper/data_types/: __init__.py  navbar.py  render_data.py
tests/: __init__.py  conftest.py  test_all_sites_script.py  test_config.py  test_data_types.py  test_general_parser.py  test_generate_sitemap_script.py  test_markdown_converter.py  test_navbar_parser.py  test_page_render.py  test_scrape_site_script.py
